create, update, delete group function added :tada:

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ pillow = "*"
 requests = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+django-rest-passwordreset = "*"
 
 [dev-packages]
 
